# ai-fitness

./: .gitignore  LICENSE  README.md  main.py
ai_fitness_backend/: README.md  docker-compose.yml  pyproject.toml  run.py
ai_fitness_backend/src/ai_fitness_backend/: database.py  llm.py  main.py  models.py  processor.py  recipe_extractor.py  utils.py
ai_fitness_backend/src/ai_fitness_backend/agents/: recipe_agent.py
ai_fitness_backend/src/ai_fitness_backend/routers/: __init__.py  query.py  upload.py
ai_fitness_backend/src/ai_fitness_backend/scrapers/: aldi_scraper.py  base_scraper.py  lidl_scraper.py  marks_spencer_scraper.py  morrisons_scraper.py  sainsburys_scraper.py  tesco_scraper.py
ai_fitness_ui/: package-lock.json  package.json
ai_fitness_ui/src/: app.css  app.html
ai_fitness_ui/src/lib/: api.js
ai_fitness_ui/src/routes/: +layout.svelte  +page.svelte
ai_fitness_web/: README.md  pubspec.yaml
ai_fitness_web/android/app/: build.gradle.kts
ai_fitness_web/ios/Runner/: Info.plist
ai_fitness_web/ios/Runner.xcodeproj/: project.pbxproj
ai_fitness_web/lib/: main.dart
ai_fitness_web/lib/models/: fitness_data.dart
ai_fitness_web/lib/screens/: home_screen.dart
ai_fitness_web/lib/services/: api_service.dart
ai_fitness_web/lib/widgets/: fitness_card.dart
ai_fitness_web/linux/: CMakeLists.txt
ai_fitness_web/linux/runner/: my_application.cc
ai_fitness_web/macos/Runner.xcodeproj/: project.pbxproj
ai_fitness_web/test/: widget_test.dart
ai_fitness_web/web/: index.html  manifest.json
ai_fitness_web/windows/: CMakeLists.txt
(+13 files in other folders)
